# beat-saber-maps-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
proto/: song_details_cache_v1.proto
src/: main.rs  models.rs  utils.rs
src/api/: mod.rs
src/api/beat_leader/: mod.rs
src/api/beat_leader/models/: api_models.rs  mod.rs  models.rs
src/api/beat_saver/: mod.rs
src/api/beat_saver/models/: api_models.rs  mod.rs  models.rs
src/api/score_saber/: mod.rs
src/api/score_saber/models/: api_models.rs  models.rs
src/song_details/: models.rs
