[package]
name = "beat-saber-maps-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-io = "0.3.30"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_with = "3.6.1"
serde_json = "1.0.113"
serde_qs = { version = "0.12.0"}
url = "2.5.0"
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.4"
tokio = { version = "1.36.0", features = ["full"] }
futures = { version = "0.3", features = ["std", "alloc"] }
prost = "0.12.3"
chrono = "0.4.34"
tar = "0.4.40"
flate2 = "1.0.28"
rust_decimal = "1.34.3"

[build-dependencies]
prost-build = "0.12.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3