[package]
name = "beat-saber-maps-scraper"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
serde_json = "1.0.143"
serde_qs = { version = "0.15.0" }
url = "2.5.7"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
tokio = { version = "1.47.1", features = ["full"] }
prost = "0.14.1"
chrono = "0.4.41"
flate2 = "1.1.2"

[build-dependencies]
prost-build = "0.14.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3